# ai-automator-arch-hyprlandI

./: README.md  install.sh  pyproject.toml  requirements.txt
ai_automator/: audit.py  cli.py  config_sample.yaml  daemon.py  db.py  dispatcher.py  hypr_parser.py  safe_cli.py
frontend/static/: index.html
scripts/: build_ydotool.sh
systemd/: ai-automator.service
