[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-automator"
version = "0.0.1"
description = "AI Automator for Arch Hyprland (scaffold)"
authors = [ { name = "srigog555-lang" } ]
readme = "README.md"
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://github.com/srigog555-lang/ai-automator-arch-hyprlandI"